# open-intern

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.claude/commands/: cicd-monitor.md  dev-test.md  pr-review-cycle.md  sentry.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_multi_agent_schema.py  b2c3d4e5f6a7_e2b_sandbox_columns.py  c3d4e5f6a7b8_scheduled_jobs_table.py  c3d4e5f6a7b8_user_management.py  d4e5f6a7b8c9_add_isolated_column.py  d5e6f7a8b9c0_agent_config_to_db.py  e5f6a7b8c9d0_add_delivery_columns.py  f6a7b8c9d0e1_hybrid_search_columns.py  g7b8c9d0e1f2_api_keys_table.py  h8c9d0e1f2g3_api_keys_table.py  (+5 more)
api/: auth.py  dashboard.py
cli/: main.py
config/: agent.example.yaml
core/: agent.py  backend_types.py  compaction.py  config.py  cost_guard.py  crypto.py  database.py  e2b_backend.py  e2b_desktop_backend.py  exceptions.py  heartbeat.py  identity.py  manager.py  messaging.py  r2_storage.py  scheduler.py  sentry.py  ssh_backend.py  telemetry.py  types.py
docs/: agent_settings.md  dashboard_guide.md  file_browser.md  lark_setting.md
integrations/: base.py  utils.py
landing/: index.html
landing-next/: package-lock.json  package.json
memory/: store.py
safety/: permissions.py
scripts/: pre-push  seed_skills.py
tests/: test_admin_agent_ui.py  test_agent_config_db.py  test_auth_api.py  test_compaction.py  test_cost_guard.py  test_e2b_desktop.py  test_e2b_shutdown.py  test_error_handling.py  test_heartbeat.py  test_integrations.py  test_scheduler.py
web/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts
(+52 files in other folders)
